
2017-05-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (screen_display): FR #191 set flag pending_accept
	  for DISPLAY screen, too

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (set_value, get_value): using correcting format modifier
	  for cob_s64_t (CB_FMT_LLD)

2017-04-27  Sergey Kashyrin <ska@kiska.net>

	* common.c (set_value, get_value): changed type long to cob_s64_t
	  as SORT was broken on Windows

2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: always use COB_KEYWORD_INLINE (set by configure)
	  for COB_INLINE

2017-04-18 Ron Norman <rjn@inglenet.com>

	* numeric.c, common.c, coblocal.h: define ISFINITE depending on
	  HAVE_ISFINITE to either use 'isfinite' or 'finite' or '_finite'

2017-04-10  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h: remove cob_get_prog_pointer in preference to
	  cob_get_pointer.

2017-04-08  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c (in_last_n_chars): fixed underflow when field->size was
	  less than n, ultimately causing an invalid read.
	* fileio.c (indexed_open): fixed minor memory leak.

2017-03-31  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed minor buffer overflows in the formatted-date
	  functions (see bug #357).

2017-03-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_chain_setup): only set field's value if given on
	  command line, preserve program internal initialization otherwise

2017-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_module_enter): set cob_call_params from argc
	  for main programs
	* common.c (cob_chain_setup): don't set cob_call_params any more
	* common.c [_MSC_VER] (cob_get_current_date_and_time):
	  silence wrong warning 6011

2017-03-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: fix minor memory leaks in configuration code
