@@ -1,4 +1,8 @@
 
+2017-05-12	Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_sys_oc_nanosleep): prefer HAVE_NANO_SLEEP over _WIN32
+
 2017-05-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.c (screen_display): FR #191 set flag pending_accept
